--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,13 +4,10 @@ on:
     tags:
       - "cli-v*"
 
-permissions:
-  id-token: write # Required for OIDC
-  contents: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: npm
     permissions:
       contents: read
       id-token: write
@@ -20,7 +17,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-          registry-url: "https://registry.npmjs.org"
+          registry-url: "https://registry.npmjs.org"      
+      - name: Update npm
+        run: npm install -g npm@latest
       - run: npm ci
       - run: npm run build --workspace packages/clinder
       - run: npm publish --provenance --access public --workspace packages/clinder
